# offer-get

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  batch_import.py  config.py  database.py  docker-compose.yml  eval_grid_result.json  eval_quick_result.json  eval_ragas.py  eval_results.csv  eval_results.json  eval_results_full.csv  eval_results_full.json  eval_retrieval.py  eval_seed_quick.json  eval_testset_builder.py  eval_testset_sample.json  interview_agent.py  main.py  pdf_handler.py  pyproject.toml  rag_engine.py  requirements.txt  schemas.py
templates/: admin.html  index.html
tests/: test_api.py  test_core.py  test_security.py
